[workspace]
members = [
  "reflex",
  "reflex-benches",
  "reflex-cli",
  "reflex-dispatcher",
  "reflex-graphql",
  "reflex-grpc",
  "reflex-handlers",
  "reflex-interpreter",
  "reflex-js",
  "reflex-json",
  "reflex-lang",
  "reflex-lisp",
  "reflex-protobuf",
  "reflex-runtime",
  "reflex-stdlib",
  "reflex-test-utils",
  "reflex-tests",
  "reflex-server",
  "reflex-utils",
]
