[package]
name = "reflex-cli"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex = { path = "../reflex" }
reflex-handlers = { path = "../reflex-handlers" }
reflex-js = { path = "../reflex-js" }
reflex-json = { path = "../reflex-json" }
reflex-graphql = { path = "../reflex-graphql" }
reflex-runtime = { path = "../reflex-runtime" }
anyhow = "1.0"
clap = { git = "https://github.com/clap-rs/clap", rev = "efeb02cd342af78d2eb8446ecce8aed05643594b" } # TODO: once clap 3.0 comes out depend on it from crates.io
rmp-serde = "0.15"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "reflexc"
path = "src/bin/compiler.rs"
