[package]
name = "reflex-cli"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex = { path = "../reflex" }
reflex-dispatcher = { path = "../reflex-dispatcher" }
reflex-interpreter = { path = "../reflex-interpreter" }
reflex-js = { path = "../reflex-js" }
reflex-json = { path = "../reflex-json" }
reflex-lang = { path = "../reflex-lang" }
reflex-lisp = { path = "../reflex-lisp" }
reflex-handlers = { path = "../reflex-handlers" }
reflex-macros = { path = "../reflex-macros" }
reflex-runtime = { path = "../reflex-runtime" }
reflex-scheduler = { path = "../reflex-scheduler" }
reflex-stdlib = { path = "../reflex-stdlib" }
reflex-utils = { path = "../reflex-utils" }
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
futures = "*"
metrics = "0.18"
pin-project = "1.0.11"
serde_json = "1.0"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[[bin]]
name = "reflexc"
path = "src/bin/compiler.rs"

[[bin]]
name = "reflex-cli"
path = "src/bin/reflex-cli.rs"
