[package]
name = "reflex-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Tim Kendrick <timkendrick@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex = { path = "../reflex" }
reflex-graphql = { path = "../reflex-graphql" }
reflex-js = { path = "../reflex-js" }
reflex-json = { path = "../reflex-json" }
reflex-runtime = { path = "../reflex-runtime" }
clap = { git = "https://github.com/clap-rs/clap", rev = "efeb02cd342af78d2eb8446ecce8aed05643594b" } # TODO: once clap 3.0 comes out depend on it from crates.io
anyhow = "^1.0.44"
serde_json = "^1.0"