[package]
name = "reflex-graphql"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex = { path = "../reflex" }
reflex-utils = { path = "../reflex-utils" }
reflex-json = { path = "../reflex-json" }
reflex-stdlib = { path = "../reflex-stdlib" }
graphql-parser = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.22"
strum_macros = "0.22"

[dev-dependencies]
reflex-lang = { path = "../reflex-lang" }
