[package]
name = "reflex-grpc"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex = { path = "../reflex" }
reflex-dispatcher = { path = "../reflex-dispatcher" }
reflex-json = { path = "../reflex-json" }
reflex-macros = { path = "../reflex-macros" }
reflex-protobuf = { path = "../reflex-protobuf" }
reflex-runtime = { path = "../reflex-runtime" }
reflex-stdlib = { path = "../reflex-stdlib" }
reflex-utils = { path = "../reflex-utils" }
futures = "*"
metrics = "0.18"
prost = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.7.2", features = ["tls"] }
  # tonic dependencies
  hyper = { version = "0.14.14", features = ["full"] }
uuid = { version = "1.0.0-alpha.1", features = ["v4", "fast-rng"] }

[build-dependencies]
prost-build = "0.10.4"
