[package]
name = "reflex-handlers"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex = { path = "../reflex" }
reflex-dispatcher = { path = "../reflex-dispatcher" }
reflex-graphql = { path = "../reflex-graphql" }
reflex-json = { path = "../reflex-json" }
reflex-macros = { path = "../reflex-macros" }
reflex-runtime = { path = "../reflex-runtime" }
reflex-stdlib = { path = "../reflex-stdlib" }
reflex-utils = { path = "../reflex-utils" }
async-recursion = "1.0.0"
bytes = "1.1.0"
crc = "2.0.0"
futures = "*"
http = "0.2.6"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
metrics = "0.18"
pin-project = "1.0.11"
tokio-native-tls = "0.3"
serde = { version = "1.0", features = ["derive"] }
strum = "0.22"
strum_macros = "0.22"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.17.1" }
uuid = { version = "1.0.0-alpha.1", features = ["v4", "fast-rng"] }
