[package]
name = "reflex-js"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex = { path = "../reflex" }
reflex-json = { path = "../reflex-json" }
resast = "0.4.1"
ressa = "0.7.1"
serde = { version = "^1.0", features = ["derive"] }
strum = "0.22"
strum_macros = "0.22"
urlencoding = "1.3.3"

[dev-dependencies]
serde_json = "1.0"