[package]
name = "reflex-js"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex = { path = "../reflex" }
reflex-json = { path = "../reflex-json" }
reflex-stdlib = { path = "../reflex-stdlib" }
chrono = "0.4"
serde = { version = "^1.0", features = ["derive"] }
strum = "0.22"
strum_macros = "0.22"
swc_common = "0.29.16"
swc_ecma_ast = "0.94.21"
swc_ecma_parser = "0.122.31"
urlencoding = "1.3.3"

[dev-dependencies]
reflex-interpreter = { path = "../reflex-interpreter" }
reflex-lang = { path = "../reflex-lang" }
serde_json = "1.0"
