[package]
name = "reflex-macros"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
split-iter = "0.1.0"
pin-project = "1"
futures = "0.3.25"

[dev-dependencies]
reflex-dispatcher = { path = "../reflex-dispatcher" }
