[package]
name = "reflex-protobuf"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex = { path = "../reflex" }
reflex-lang = { path = "../reflex-lang" }
reflex-stdlib = { path = "../reflex-stdlib" }
bytes = "1.1.0"
chrono = "0.4"
nom = "7.1.0"
prost = "0.10"
prost-reflect = { version = "0.8.1", features = ["reflect-well-known-types", "serde"] }

[build-dependencies]
prost-build = "0.10.4"
