[package]
name = "reflex-recorder"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex-dispatcher = { path = "../reflex-dispatcher" }
reflex-macros = { path = "../reflex-macros" }
reflex-scheduler = { path = "../reflex-scheduler" }
reflex-utils = { path = "../reflex-utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
