[package]
name = "reflex-runtime"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex = { path = "../reflex" }
reflex-dispatcher = { path = "../reflex-dispatcher" }
reflex-interpreter = { path = "../reflex-interpreter" }
reflex-json = { path = "../reflex-json" }
reflex-macros = { path = "../reflex-macros" }
reflex-utils = { path = "../reflex-utils" }
futures = "*"
pin-project = "1.0.11"
serde = { version = "1.0", features = ["derive"] }
metrics = "0.18"
quantiles = "0.7.0"
