[package]
name = "reflex-server"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2021"
default-run = "reflex-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex = { path = "../reflex" }
reflex-cli = { path = "../reflex-cli" }
reflex-graphql = { path = "../reflex-graphql" }
reflex-handlers = { path = "../reflex-handlers" }
reflex-js = { path = "../reflex-js" }
reflex-json = { path = "../reflex-json" }
reflex-runtime = { path = "../reflex-runtime" }
anyhow = "1.0"
clap = { git = "https://github.com/clap-rs/clap", rev = "efeb02cd342af78d2eb8446ecce8aed05643594b" } # TODO: once clap 3.0 comes out depend on it from crates.io
futures = "*"
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.3.2"
proc-macro2 = "1.0"
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.0", features = ["release_max_level_info"] }
tracing-subscriber = "0.3"
uuid = { version = "1.0.0-alpha.1", features = ["v4", "fast-rng"] }

[[bin]]
name = "reflex-server"

[[bin]]
name = "execute-query"

[[bin]]
name = "profile-query"
