[package]
name = "reflex-server"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2021"
default-run = "reflex-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex = { path = "../reflex" }
reflex-cli = { path = "../reflex-cli" }
reflex-dispatcher = { path = "../reflex-dispatcher" }
reflex-graphql = { path = "../reflex-graphql" }
reflex-grpc = { path = "../reflex-grpc" }
reflex-handlers = { path = "../reflex-handlers" }
reflex-interpreter = { path = "../reflex-interpreter" }
reflex-js = { path = "../reflex-js" }
reflex-json = { path = "../reflex-json" }
reflex-lang = { path = "../reflex-lang" }
reflex-macros = { path = "../reflex-macros" }
reflex-recorder = { path = "../reflex-recorder" }
reflex-runtime = { path = "../reflex-runtime" }
reflex-scheduler = { path = "../reflex-scheduler" }
reflex-stdlib = { path = "../reflex-stdlib" }
reflex-utils = { path = "../reflex-utils" }
anyhow = "1.0"
bytes = "1.1.0"
chrono = "0.4"
clap = "3.0"
console-subscriber = "0.1"
futures = "*"
http = "0.2.6"
http-serde = "1.1.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.6.0"
metrics = "0.18"
metrics-exporter-prometheus = "0.9.0"
nom = "7.1.0"
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "metrics"] }
opentelemetry-http = { version = "0.6.0" }
opentelemetry-otlp = { version = "0.10.0", features = ["http-proto", "tls"] }
pin-project = "1.0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.22"
strum_macros = "0.22"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-metrics = "0.1.0"
tonic = { version = "0.6.2", features = ["tls", "tls-roots"] }
tracing = { version = "0.1.0", features = ["release_max_level_info"] }
tracing-subscriber = "0.3"
uuid = { version = "1.0.0-alpha.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
reflex-lisp = { path = "../reflex-lisp" }
reflex-test-utils = { path= "../reflex-test-utils" }

[[bin]]
name = "reflex-server"

[[bin]]
name = "execute-query"
