[package]
name = "reflex-tests"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex = { path = "../reflex" }
reflex-cli = { path = "../reflex-cli" }
reflex-dispatcher = { path = "../reflex-dispatcher" }
reflex-graphql = { path = "../reflex-graphql" }
reflex-grpc = { path = "../reflex-grpc" }
reflex-handlers = { path = "../reflex-handlers" }
reflex-interpreter = { path = "../reflex-interpreter" }
reflex-js = { path = "../reflex-js" }
reflex-json = { path = "../reflex-json" }
reflex-lang = { path = "../reflex-lang" }
reflex-lisp = { path = "../reflex-lisp" }
reflex-runtime = { path = "../reflex-runtime" }
reflex-stdlib = { path = "../reflex-stdlib" }
reflex-utils = { path = "../reflex-utils" }
reflex-server = { path = "../reflex-server" }
http = "0.2.6"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
rand = "0.8.5"
serde_json = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-tungstenite = "0.17.2"
url = "2.2.2"
futures-util = "0.3.23"
