[package]
name = "reflex-utils"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = {version="1.0", features=["unbounded_depth"]}
rmp-serde = "1.1"
tokio = { version = "1", features = ["full"] }
