[package]
name = "reflex"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
im = "15.0.0"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
strum = "0.22"
strum_macros = "0.22"
tracing = { version = "0.1.0", features = ["release_max_level_info"] }
uuid = { version = "1.0.0-alpha.1", features = ["macro-diagnostics", "serde"] }

[dev-dependencies]
rmp-serde = "0.15"
